--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,11 @@ body {
   margin: 0;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 /* Copy and paste and printing function of lyrics web pages are disabled for a Japanese viweer. */
 
 /* no print */
