--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,27 @@
+@import "@fontsource/roboto/300.css";
+@import "@fontsource/roboto/400.css";
+@import "@fontsource/roboto/500.css";
+@import "@fontsource/roboto/700.css";
+
+/* Copy and paste and printing function of lyrics web pages are disabled for a Japanese viweer. */
+
+/* no print */
+@media print {
+  body {
+    display: none !important;
+  }
+}
+
+/* no selection */
+body {
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -ms-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+/* General styles */
 html,
 body,
 #root,
@@ -16,22 +40,4 @@ main {
 a {
   text-decoration: none;
   color: inherit;
-}
-
-/* Copy and paste and printing function of lyrics web pages are disabled for a Japanese viweer. */
-
-/* no print */
-@media print {
-  body {
-    display: none !important;
-  }
-}
-
-/* no selection */
-body {
-  -moz-user-select: none;
-  -khtml-user-select: none;
-  -ms-user-select: none;
-  -webkit-user-select: none;
-  user-select: none;
 }
